# VK_FNAF

./: .gitignore  BuildDebug.sh  BuildRelease.sh  CMakeLists.txt  README.md  dev.sh
Game/: CMakeLists.txt
Game/Compiled/Shaders/: AtlasShader.vert  AtlasShader_vert.spv  BaseShader.frag  BaseShader.vert  BaseShader_vert.spv  CompileAtlas.sh  CompileBase.sh  CompileFullscreen.sh  CompileText.sh  FullscreenShader.frag  FullscreenShader.vert  FullscreenShader_frag.spv  FullscreenShader_vert.spv  TextShader.vert  TextShader_frag.spv  TextShader_vert.spv
Game/src/: main.c
Game/src/InGameUI/Screens/: MonitorHUDScreen.c  MonitorHUDScreen.h  OfficeHUDScreen.c  OfficeHUDScreen.h
Game/src/InGameUI/Widgets/: ImageDisplayer.c  ImageDisplayer.h  TextDisplayer.c  TextDisplayer.h  UIAtlas.c  UIAtlas.h  UIButton.c  UIButton.h  UIHoverable.c  UIHoverable.h
Game/src/core/: AudioPlayer.c  AudioPlayer.h  FontLoader.c  FontLoader.h  Game.c  Game.h  Renderer.c  Renderer.h  Shader.c  Shader.h  Texture.c  Texture.h  Window.c  Window.h  vk_context.c  vk_context.h  vk_swapchain.c  vk_swapchain.h
